--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 plugins {
     id 'java'
-    id 'com.github.johnrengelman.shadow' version '8.1.1'
+    id 'com.gradleup.shadow' version '8.3.0'
 }
 
 group 'net.onebeastchris.extension'
@@ -29,6 +29,10 @@ test {
 
 jar {
     archiveClassifier.set("unshaded")
+}
+
+build {
+    dependsOn(shadowJar)
 }
 
 shadowJar {
