--- a/src/main/resources/extension.yml
+++ b/src/main/resources/extension.yml
@@ -1,6 +1,6 @@
 id: lucklink
 name: LuckLink
-main: net.onebeastchris.extension.lucklink.LuckLink
+main: dev.onechris.extension.lucklink.LuckLink
 api: 2.4.1
 version: 1.0.1
 authors: [onebeastchris]
